<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="title_login_page">Welcome to Story App</string>
    <string name="message_login_page">post your interesting story here</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Name</string>
    <string name="title_signup_page">Create Your Account</string>
    <string name="title_welcome_page">Welcome to Story App</string>
    <string name="message_welcome_page">Explore and create your own story</string>
    <string name="title_1">Share Your Story</string>
    <string name="desc_1">caption here</string>
    <string name="title_2">Share Your Image</string>
    <string name="desc_2">caption</string>
    <string name="title_3">Title</string>
    <string name="desc_3">caption</string>
    <string name="title_4">title</string>
    <string name="desc_4">caption</string>
    <string name="start_now">START NOW</string>
    <string name="description">Description</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="upload">UPLOAD</string>
    <string name="add_desc">Description</string>
    <string name="menu_1">Translation</string>
    <string name="menu_2">Logout</string>
    <string name="indonesia">Indonesian</string>
    <string name="english">English</string>
    <string name="switch_language">language has change</string>
    <string name="logout">logout</string>
    <string name="are_your_sure">Are you sure?</string>
    <string name="continue_dialog">continue</string>
    <string name="cancel">cancel</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_short_password">Password cannot be less than 8 characters</string>
    <string name="login_success">Account has been successfully logged in</string>
    <string name="signup_success">Account has been created</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_3">Map</string>
    <string name="retry">Time Out</string>
    <string name="location">Location</string>
</resources>